--- a/Regresión/Regresion_Bajas_Antiguedad_v7.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v7.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 24,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "38135f65-1e48-4fa6-ac2e-9fad3bed121f",
+        "outputId": "4210a491-ab5f-4c81-9bfe-27b7cd95c2ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 81,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,57 +103,17 @@
         "X  = data.iloc[:,:-1].values\n",
         "Y  = data.iloc[:,9]"
       ],
-      "execution_count": 82,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RbQx30WIGlcX",
-        "outputId": "cae3359c-49b1-49da-9f7d-eee44df68cd3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 302
-        }
+        "id": "RbQx30WIGlcX"
       },
       "source": [
         "#data.describe()\n",
         "data.info()"
-      ],
-      "execution_count": 51,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 19 entries, 0 to 18\n",
-            "Data columns (total 10 columns):\n",
-            " #   Column           Non-Null Count  Dtype\n",
-            "---  ------           --------------  -----\n",
-            " 0   ANIO_BAJA        19 non-null     int64\n",
-            " 1   MES_BAJA         19 non-null     int64\n",
-            " 2   TRIM_1           19 non-null     int64\n",
-            " 3   TRIM_2           19 non-null     int64\n",
-            " 4   TRIM_3           19 non-null     int64\n",
-            " 5   TRIM_4           19 non-null     int64\n",
-            " 6   ENTRE_1_2_ANIOS  19 non-null     int64\n",
-            " 7   ENTRE_3_4_ANIOS  19 non-null     int64\n",
-            " 8   MAS_5_ANIOS      19 non-null     int64\n",
-            " 9   TOTAL_BAJAS      19 non-null     int64\n",
-            "dtypes: int64(10)\n",
-            "memory usage: 1.6 KB\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DCVgfrSYH9bT"
-      },
-      "source": [
-        "X[:,0:2]"
       ],
       "execution_count": null,
       "outputs": []
@@ -161,41 +121,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d6KDSYXUU82b"
+        "id": "DCVgfrSYH9bT"
       },
       "source": [
-        "#escalamos los datos\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "sc_x = StandardScaler()\n",
-        "sc_y = StandardScaler()\n",
-        "x_train = sc_x.fit_transform(x_train)\n",
-        "y_train= sc_y.fit_transform(y_train)\n",
-        "x_test = sc_x.fit_transform(x_test)\n",
-        "y_test= sc_y.fit_transform(y_test)"
+        "X"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2TE6QtHbPGlm",
-        "outputId": "e73bc163-c4d9-4f71-c5ae-5c6d799bdabd",
+        "outputId": "05089bda-a211-4352-8136-7473f82f1d84",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 171
+          "height": 339
         }
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.svm import SVC\n",
+        "from sklearn.svm import SVR\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
         "# 1trim\n",
         "#entrenamos datos\n",
-        "x1 = X[:,0:2]\n",
-        "y1 = X[:,7]\n",
+        "x1 = X \n",
+        "y1 = Y \n",
         "y1 = y1[:,np.newaxis]\n",
         "\n",
         "x_train, x_test, y_train, y_test = train_test_split(x1,y1,test_size=0.2, random_state=0)\n",
@@ -209,30 +162,40 @@
         "print(logreg.score(x_train,y_train))\n",
         "\n",
         "#Modelo vectores de soporte\n",
-        "svc= SVC(kernel='rbf',degree=3, C=1.0)\n",
+        "svc= SVR(kernel='rbf',degree=3, C=1.0,epsilon=0.2)\n",
         "svc.fit(x_train,y_train)\n",
         "y_predic_test_m2 = svc.predict(x_test)\n",
         "y_predic_train_m2 = svc.predict(x_train)\n",
         "print('Precisión Vectores de soporte')\n",
         "print(svc.score(x_train,y_train))\n"
       ],
-      "execution_count": 100,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión Modelo Regresión Logística\n",
-            "0.4\n",
+            "1.0\n",
             "Precisión Vectores de soporte\n",
-            "0.26666666666666666\n"
+            "-0.028178280465376297\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+            "  # Remove the CWD from sys.path while we load stuff.\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n"
           ],
@@ -243,81 +206,76 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Q7RfYnMUaXo",
-        "outputId": "5cd007d0-3284-46e7-de10-2b5a05a6b9bf",
+        "id": "tCRv6LYGbd5f",
+        "outputId": "cf2f0a52-96fd-4307-b347-6df65196f217",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 269
+          "height": 166
         }
       },
       "source": [
-        "y_train"
+        "pd.DataFrame(x_test[:,0])"
       ],
-      "execution_count": 71,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2020</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "array([[ 0.57470362],\n",
-              "       [ 1.33984157],\n",
-              "       [ 2.87011747],\n",
-              "       [-0.85355389],\n",
-              "       [-0.19043433],\n",
-              "       [ 0.01360245],\n",
-              "       [ 0.42167603],\n",
-              "       [ 0.06461165],\n",
-              "       [-1.15960907],\n",
-              "       [-0.39447112],\n",
-              "       [-1.15960907],\n",
-              "       [-0.7005263 ],\n",
-              "       [ 0.01360245],\n",
-              "       [-0.44548032],\n",
-              "       [-0.39447112]])"
+              "      0\n",
+              "0  2019\n",
+              "1  2019\n",
+              "2  2020\n",
+              "3  2020"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PDHpmqAnTxxV",
-        "outputId": "fd523eee-b452-4d9e-a9e3-81206ec93c06",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        }
-      },
-      "source": [
-        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-        "from sklearn.compose import ColumnTransformer\n",
-        "\n",
-        "lab_enc = LabelEncoder()\n",
-        "training_scores_encoded = lab_enc.fit_transform(y_train)\n",
-        "print(training_scores_encoded)\n",
-        "\n"
-      ],
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[ 9 10 11  1  5  6  8  7  0  4  0  2  6  3  4]\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/preprocessing/_label.py:251: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
+          "execution_count": 50
         }
       ]
     },
@@ -325,28 +283,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "TurbVM8CQisk",
-        "outputId": "278df233-83d5-478c-8d9b-1191afc3c92e",
+        "outputId": "18383a21-f25c-4461-8e57-240ac10850f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 84
         }
       },
       "source": [
-        "float(x_train[0,0])"
+        "y_test"
       ],
-      "execution_count": 65,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.414213562373256"
+              "array([[1114],\n",
+              "       [2435],\n",
+              "       [1458],\n",
+              "       [1476]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 32
         }
       ]
     },
@@ -354,42 +315,53 @@
       "cell_type": "code",
       "metadata": {
         "id": "UjdGF-vcMTJj",
-        "outputId": "326f2e52-03ca-475e-f135-86e4a8a02d4c",
+        "outputId": "a207cc88-258e-440b-9015-acaecb2ddd70",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 269
+          "height": 34
         }
       },
       "source": [
-        "y_train"
+        "y_predic_test_m1"
       ],
-      "execution_count": 36,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0.57470362],\n",
-              "       [ 1.33984157],\n",
-              "       [ 2.87011747],\n",
-              "       [-0.85355389],\n",
-              "       [-0.19043433],\n",
-              "       [ 0.01360245],\n",
-              "       [ 0.42167603],\n",
-              "       [ 0.06461165],\n",
-              "       [-1.15960907],\n",
-              "       [-0.39447112],\n",
-              "       [-1.15960907],\n",
-              "       [-0.7005263 ],\n",
-              "       [ 0.01360245],\n",
-              "       [-0.44548032],\n",
-              "       [-0.39447112]])"
+              "array([1201, 1816, 1533, 1659])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OjNqXwc2cF4H",
+        "outputId": "08d5c14f-5272-43ed-8920-962a85109bde",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "y_predic_test_m2 = svc.predict(x_test)\n",
+        "print(y_predic_test_m2)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1291.87108955 1292.39043176 1292.11114008 1292.02812638]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
