--- a/Regresión/Regresion_Bajas_Antiguedad_v7.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v7.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "2a6a709d-acce-4de4-8aa2-27f9fcb4449b",
+        "outputId": "d3ca63c3-5bfd-42a3-97c9-bc72969720b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,279 +96,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0JYqth2Ty8-k",
-        "outputId": "331e36e1-60a0-45c2-f775-4db50c49b17e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
+        "id": "0JYqth2Ty8-k"
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
-        "data = data[['MES_BAJA','TRIM_1','TRIM_2','TRIM_3','TRIM_4','ENTRE_1_2_ANIOS','ENTRE_3_4_ANIOS','MAS_5_ANIOS','TOTAL_BAJAS']]\n",
-        "data = data.groupby(['MES_BAJA']).agg({\"MES_BAJA\":'mean',\"TRIM_1\": 'mean',\"TRIM_2\": 'mean',\n",
-        "                                \"TRIM_3\": 'mean',\"TRIM_4\": 'mean',  \n",
-        "                                \"ENTRE_1_2_ANIOS\": 'mean',\"ENTRE_3_4_ANIOS\": 'mean',\n",
-        "                                \"MAS_5_ANIOS\": 'mean',\"TOTAL_BAJAS\": 'mean'})\n",
+        " \n",
         "X  = data.iloc[:,:-1].values\n",
-        "Y  = data.iloc[:,8]\n",
+        "Y  = data.iloc[:,8].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:9: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
-            "  if __name__ == '__main__':\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 78,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RbQx30WIGlcX",
-        "outputId": "93c3a58e-2664-4e0b-8432-c682c8b8615f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 432
-        }
+        "id": "RbQx30WIGlcX"
       },
       "source": [
+        "#data.info()#\n",
+        "#data.describe()\n",
         "data"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>MES_BAJA</th>\n",
-              "      <th>TRIM_1</th>\n",
-              "      <th>TRIM_2</th>\n",
-              "      <th>TRIM_3</th>\n",
-              "      <th>TRIM_4</th>\n",
-              "      <th>ENTRE_1_2_ANIOS</th>\n",
-              "      <th>ENTRE_3_4_ANIOS</th>\n",
-              "      <th>MAS_5_ANIOS</th>\n",
-              "      <th>TOTAL_BAJAS</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>MES_BAJA</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>31.0</td>\n",
-              "      <td>22.0</td>\n",
-              "      <td>21.5</td>\n",
-              "      <td>271.0</td>\n",
-              "      <td>727.5</td>\n",
-              "      <td>399.0</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>1491.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>38.5</td>\n",
-              "      <td>18.5</td>\n",
-              "      <td>31.5</td>\n",
-              "      <td>343.0</td>\n",
-              "      <td>924.5</td>\n",
-              "      <td>511.0</td>\n",
-              "      <td>21.5</td>\n",
-              "      <td>1888.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>47.5</td>\n",
-              "      <td>24.0</td>\n",
-              "      <td>24.5</td>\n",
-              "      <td>239.5</td>\n",
-              "      <td>736.0</td>\n",
-              "      <td>424.0</td>\n",
-              "      <td>38.0</td>\n",
-              "      <td>1533.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>4</td>\n",
-              "      <td>44.5</td>\n",
-              "      <td>23.5</td>\n",
-              "      <td>19.5</td>\n",
-              "      <td>172.5</td>\n",
-              "      <td>546.0</td>\n",
-              "      <td>318.0</td>\n",
-              "      <td>28.5</td>\n",
-              "      <td>1152.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>5</td>\n",
-              "      <td>56.0</td>\n",
-              "      <td>20.0</td>\n",
-              "      <td>24.0</td>\n",
-              "      <td>202.5</td>\n",
-              "      <td>545.5</td>\n",
-              "      <td>313.5</td>\n",
-              "      <td>21.0</td>\n",
-              "      <td>1182.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>6</td>\n",
-              "      <td>54.0</td>\n",
-              "      <td>35.0</td>\n",
-              "      <td>22.5</td>\n",
-              "      <td>174.0</td>\n",
-              "      <td>672.0</td>\n",
-              "      <td>369.0</td>\n",
-              "      <td>57.5</td>\n",
-              "      <td>1384.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>7</td>\n",
-              "      <td>59.5</td>\n",
-              "      <td>43.5</td>\n",
-              "      <td>26.5</td>\n",
-              "      <td>166.0</td>\n",
-              "      <td>679.5</td>\n",
-              "      <td>382.5</td>\n",
-              "      <td>72.5</td>\n",
-              "      <td>1430.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>8</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>18.0</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>168.0</td>\n",
-              "      <td>590.0</td>\n",
-              "      <td>294.0</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>1114.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>9</td>\n",
-              "      <td>26.0</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>20.0</td>\n",
-              "      <td>142.0</td>\n",
-              "      <td>498.0</td>\n",
-              "      <td>316.0</td>\n",
-              "      <td>10.0</td>\n",
-              "      <td>1031.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>10</td>\n",
-              "      <td>29.0</td>\n",
-              "      <td>15.0</td>\n",
-              "      <td>17.0</td>\n",
-              "      <td>134.0</td>\n",
-              "      <td>470.0</td>\n",
-              "      <td>294.0</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>978.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>11</td>\n",
-              "      <td>35.0</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>22.0</td>\n",
-              "      <td>153.0</td>\n",
-              "      <td>484.0</td>\n",
-              "      <td>294.0</td>\n",
-              "      <td>11.0</td>\n",
-              "      <td>1018.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>12</td>\n",
-              "      <td>42.0</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>15.0</td>\n",
-              "      <td>181.0</td>\n",
-              "      <td>603.0</td>\n",
-              "      <td>1470.0</td>\n",
-              "      <td>105.0</td>\n",
-              "      <td>2435.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "          MES_BAJA  TRIM_1  TRIM_2  ...  ENTRE_3_4_ANIOS  MAS_5_ANIOS  TOTAL_BAJAS\n",
-              "MES_BAJA                            ...                                           \n",
-              "1                1    31.0    22.0  ...            399.0         19.0       1491.0\n",
-              "2                2    38.5    18.5  ...            511.0         21.5       1888.5\n",
-              "3                3    47.5    24.0  ...            424.0         38.0       1533.5\n",
-              "4                4    44.5    23.5  ...            318.0         28.5       1152.5\n",
-              "5                5    56.0    20.0  ...            313.5         21.0       1182.5\n",
-              "6                6    54.0    35.0  ...            369.0         57.5       1384.0\n",
-              "7                7    59.5    43.5  ...            382.5         72.5       1430.0\n",
-              "8                8    19.0    18.0  ...            294.0          6.0       1114.0\n",
-              "9                9    26.0    19.0  ...            316.0         10.0       1031.0\n",
-              "10              10    29.0    15.0  ...            294.0         19.0        978.0\n",
-              "11              11    35.0    19.0  ...            294.0         11.0       1018.0\n",
-              "12              12    42.0    19.0  ...           1470.0        105.0       2435.0\n",
-              "\n",
-              "[12 rows x 9 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 336
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2TE6QtHbPGlm",
-        "outputId": "ecf2b28f-bfc6-4899-840a-3a716c76b1e9",
+        "outputId": "5ec95ace-c4c7-40f0-b575-3156e3c81548",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 87
         }
       },
       "source": [
@@ -397,10 +157,18 @@
         "\n",
         "#aplicando modelo svm\n",
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
-        "svr.fit(x_train,y_train)\n"
+        "svr.fit(x_train,y_train)\n",
+        "print(svr.score(x_train,y_train))"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.6861068622041686\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -408,19 +176,6 @@
             "  y = column_or_1d(y, warn=True)\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.2, gamma='scale',\n",
-              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 485
         }
       ]
     },
